--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
+    "jquery": "^3.4.1",
     "meteor-node-stubs": "^1.0.0",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "tracker-component": "^1.3.21"
   },
   "meteor": {
     "mainModule": {
